// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components >> story card  Story card IS liked and IS bookmarked  Should render story card correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#2828281e",
          "borderRadius": 8,
          "borderWidth": 0.5,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "marginTop": 8,
          "padding": 8,
          "paddingBottom": 8,
        },
        Array [
          Object {
            "elevation": 2,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 10,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "width": "80%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 18,
                "lineHeight": 20,
              },
            ]
          }
        >
          Test Title
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "width": "25%",
              },
              Array [
                Object {},
              ],
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            fill="#282828"
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            secondaryFill={null}
            secondaryOpacity={0.4}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={512}
            vbWidth={512}
            width={16}
          >
            <RNSVGGroup
              fill={4280821800}
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                fill={4280821800}
                fillOpacity={1}
                propList={
                  Array [
                    "fill",
                    "fillOpacity",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              Array [
                Object {
                  "color": "#282828",
                  "display": "flex",
                  "fontFamily": "SFUIDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginLeft": 8,
                },
              ]
            }
          >
            20:00
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "marginLeft": 8,
              },
              Array [
                Object {},
              ],
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={16}
              bbWidth={16}
              fill="#D94E69"
              focusable={false}
              height={16}
              meetOrSlice={0}
              minX={0}
              minY={0}
              secondaryFill={null}
              secondaryOpacity={0.4}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {},
                  Object {
                    "flex": 0,
                    "height": 16,
                    "width": 16,
                  },
                ]
              }
              testID="story-card-heart-icon"
              vbHeight={512}
              vbWidth={512}
              width={16}
            >
              <RNSVGGroup
                fill={4292431465}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z"
                  fill={4292431465}
                  fillOpacity={1}
                  propList={
                    Array [
                      "fill",
                      "fillOpacity",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#282828",
                  "display": "flex",
                  "fontFamily": "SFUIDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginLeft": 8,
                },
              ]
            }
          >
            15
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#67B6A8",
              "borderRadius": 8,
              "display": "flex",
              "marginTop": 8,
              "padding": 2,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              },
            ]
          }
        >
          Test topic
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "marginLeft": 8,
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Object {
                "borderRadius": 96,
                "height": 30,
                "width": 30,
              },
            ],
          ]
        }
      >
        <FastImageView
          resizeMode="cover"
          source={
            Object {
              "priority": "normal",
              "uri": "https://picsum.photos/id/237/200/300",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          fill="#282828"
          focusable={false}
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          secondaryFill={null}
          secondaryOpacity={0.4}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "marginLeft": 16,
              },
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          testID="story-card-bookmark-icon"
          vbHeight={512}
          vbWidth={384}
          width={16}
        >
          <RNSVGGroup
            fill={4280821800}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M0 512V48C0 21.49 21.49 0 48 0h288c26.51 0 48 21.49 48 48v464L192 400 0 512z"
              fill={4280821800}
              fillOpacity={1}
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`components >> story card  Story card NOT liked and NOT bookmarked Should render story card  1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#2828281e",
          "borderRadius": 8,
          "borderWidth": 0.5,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "marginTop": 8,
          "padding": 8,
          "paddingBottom": 8,
        },
        Array [
          Object {
            "elevation": 2,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 10,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "width": "80%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 18,
                "lineHeight": 20,
              },
            ]
          }
        >
          Test Title
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "width": "25%",
              },
              Array [
                Object {},
              ],
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            fill="#282828"
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            secondaryFill={null}
            secondaryOpacity={0.4}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={512}
            vbWidth={512}
            width={16}
          >
            <RNSVGGroup
              fill={4280821800}
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                fill={4280821800}
                fillOpacity={1}
                propList={
                  Array [
                    "fill",
                    "fillOpacity",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              Array [
                Object {
                  "color": "#282828",
                  "display": "flex",
                  "fontFamily": "SFUIDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginLeft": 8,
                },
              ]
            }
          >
            20:00
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "marginLeft": 8,
              },
              Array [
                Object {},
              ],
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={16}
              bbWidth={16}
              fill="#D94E69"
              focusable={false}
              height={16}
              meetOrSlice={0}
              minX={0}
              minY={0}
              secondaryFill={null}
              secondaryOpacity={0.4}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {},
                  Object {
                    "flex": 0,
                    "height": 16,
                    "width": 16,
                  },
                ]
              }
              testID="story-card-heart-icon"
              vbHeight={512}
              vbWidth={512}
              width={16}
            >
              <RNSVGGroup
                fill={4292431465}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill={4292431465}
                  fillOpacity={1}
                  propList={
                    Array [
                      "fill",
                      "fillOpacity",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#282828",
                  "display": "flex",
                  "fontFamily": "SFUIDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginLeft": 8,
                },
              ]
            }
          >
            15
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#67B6A8",
              "borderRadius": 8,
              "display": "flex",
              "marginTop": 8,
              "padding": 2,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              },
            ]
          }
        >
          Test topic
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "marginLeft": 8,
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Object {
                "borderRadius": 96,
                "height": 30,
                "width": 30,
              },
            ],
          ]
        }
      >
        <FastImageView
          resizeMode="cover"
          source={
            Object {
              "priority": "normal",
              "uri": "https://picsum.photos/id/237/200/300",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          fill="#282828"
          focusable={false}
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          secondaryFill={null}
          secondaryOpacity={0.4}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "marginLeft": 16,
              },
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          testID="story-card-bookmark-icon"
          vbHeight={512}
          vbWidth={384}
          width={16}
        >
          <RNSVGGroup
            fill={4280821800}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
              fill={4280821800}
              fillOpacity={1}
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`components >> story card  Story card with NO profile image and render icon Should render story card correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#2828281e",
          "borderRadius": 8,
          "borderWidth": 0.5,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "marginTop": 8,
          "padding": 8,
          "paddingBottom": 8,
        },
        Array [
          Object {
            "elevation": 2,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 10,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "width": "80%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 18,
                "lineHeight": 20,
              },
            ]
          }
        >
          Test Title
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "width": "25%",
              },
              Array [
                Object {},
              ],
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            fill="#282828"
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            secondaryFill={null}
            secondaryOpacity={0.4}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={512}
            vbWidth={512}
            width={16}
          >
            <RNSVGGroup
              fill={4280821800}
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                fill={4280821800}
                fillOpacity={1}
                propList={
                  Array [
                    "fill",
                    "fillOpacity",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              Array [
                Object {
                  "color": "#282828",
                  "display": "flex",
                  "fontFamily": "SFUIDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginLeft": 8,
                },
              ]
            }
          >
            20:00
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "marginLeft": 8,
              },
              Array [
                Object {},
              ],
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={16}
              bbWidth={16}
              fill="#D94E69"
              focusable={false}
              height={16}
              meetOrSlice={0}
              minX={0}
              minY={0}
              secondaryFill={null}
              secondaryOpacity={0.4}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {},
                  Object {
                    "flex": 0,
                    "height": 16,
                    "width": 16,
                  },
                ]
              }
              testID="story-card-heart-icon"
              vbHeight={512}
              vbWidth={512}
              width={16}
            >
              <RNSVGGroup
                fill={4292431465}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill={4292431465}
                  fillOpacity={1}
                  propList={
                    Array [
                      "fill",
                      "fillOpacity",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#282828",
                  "display": "flex",
                  "fontFamily": "SFUIDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginLeft": 8,
                },
              ]
            }
          >
            15
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#67B6A8",
              "borderRadius": 8,
              "display": "flex",
              "marginTop": 8,
              "padding": 2,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              },
            ]
          }
        >
          Test topic
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "marginLeft": 8,
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 96,
              "borderWidth": 1,
              "display": "flex",
              "height": 30,
              "justifyContent": "center",
              "padding": 16,
              "width": 30,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={20}
          bbWidth={20}
          fill="#000"
          focusable={false}
          height={20}
          meetOrSlice={0}
          minX={0}
          minY={0}
          secondaryFill={null}
          secondaryOpacity={0.4}
          size={20}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {},
              Object {
                "flex": 0,
                "height": 20,
                "width": 20,
              },
            ]
          }
          vbHeight={512}
          vbWidth={448}
          width={20}
        >
          <RNSVGGroup
            fill={4278190080}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"
              fill={4278190080}
              fillOpacity={1}
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          fill="#282828"
          focusable={false}
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          secondaryFill={null}
          secondaryOpacity={0.4}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "marginLeft": 16,
              },
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          testID="story-card-bookmark-icon"
          vbHeight={512}
          vbWidth={384}
          width={16}
        >
          <RNSVGGroup
            fill={4280821800}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
              fill={4280821800}
              fillOpacity={1}
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;

exports[`components >> story card  Story card with profile image Should render story card correctly 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "opacity": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "alignSelf": "center",
          "backgroundColor": "#ffffff",
          "borderColor": "#2828281e",
          "borderRadius": 8,
          "borderWidth": 0.5,
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 24,
          "marginTop": 8,
          "padding": 8,
          "paddingBottom": 8,
        },
        Array [
          Object {
            "elevation": 2,
            "shadowColor": "#282828",
            "shadowOffset": Object {
              "height": 4,
              "width": 0,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 10,
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "display": "flex",
            "width": "80%",
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "display": "flex",
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 18,
                "lineHeight": 20,
              },
            ]
          }
        >
          Test Title
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "marginTop": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "width": "25%",
              },
              Array [
                Object {},
              ],
            ]
          }
        >
          <RNSVGSvgView
            align="xMidYMid"
            bbHeight={16}
            bbWidth={16}
            fill="#282828"
            focusable={false}
            height={16}
            meetOrSlice={0}
            minX={0}
            minY={0}
            secondaryFill={null}
            secondaryOpacity={0.4}
            style={
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "borderWidth": 0,
                },
                Object {},
                Object {
                  "flex": 0,
                  "height": 16,
                  "width": 16,
                },
              ]
            }
            vbHeight={512}
            vbWidth={512}
            width={16}
          >
            <RNSVGGroup
              fill={4280821800}
              propList={
                Array [
                  "fill",
                ]
              }
            >
              <RNSVGPath
                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm61.8-104.4l-84.9-61.7c-3.1-2.3-4.9-5.9-4.9-9.7V116c0-6.6 5.4-12 12-12h32c6.6 0 12 5.4 12 12v141.7l66.8 48.6c5.4 3.9 6.5 11.4 2.6 16.8L334.6 349c-3.9 5.3-11.4 6.5-16.8 2.6z"
                fill={4280821800}
                fillOpacity={1}
                propList={
                  Array [
                    "fill",
                    "fillOpacity",
                  ]
                }
              />
            </RNSVGGroup>
          </RNSVGSvgView>
          <Text
            style={
              Array [
                Object {
                  "color": "#282828",
                  "display": "flex",
                  "fontFamily": "SFUIDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginLeft": 8,
                },
              ]
            }
          >
            20:00
          </Text>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "marginLeft": 8,
              },
              Array [
                Object {},
              ],
            ]
          }
        >
          <View
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <RNSVGSvgView
              align="xMidYMid"
              bbHeight={16}
              bbWidth={16}
              fill="#D94E69"
              focusable={false}
              height={16}
              meetOrSlice={0}
              minX={0}
              minY={0}
              secondaryFill={null}
              secondaryOpacity={0.4}
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  Object {},
                  Object {
                    "flex": 0,
                    "height": 16,
                    "width": 16,
                  },
                ]
              }
              testID="story-card-heart-icon"
              vbHeight={512}
              vbWidth={512}
              width={16}
            >
              <RNSVGGroup
                fill={4292431465}
                propList={
                  Array [
                    "fill",
                  ]
                }
              >
                <RNSVGPath
                  d="M458.4 64.3C400.6 15.7 311.3 23 256 79.3 200.7 23 111.4 15.6 53.6 64.3-21.6 127.6-10.6 230.8 43 285.5l175.4 178.7c10 10.2 23.4 15.9 37.6 15.9 14.3 0 27.6-5.6 37.6-15.8L469 285.6c53.5-54.7 64.7-157.9-10.6-221.3zm-23.6 187.5L259.4 430.5c-2.4 2.4-4.4 2.4-6.8 0L77.2 251.8c-36.5-37.2-43.9-107.6 7.3-150.7 38.9-32.7 98.9-27.8 136.5 10.5l35 35.7 35-35.7c37.8-38.5 97.8-43.2 136.5-10.6 51.1 43.1 43.5 113.9 7.3 150.8z"
                  fill={4292431465}
                  fillOpacity={1}
                  propList={
                    Array [
                      "fill",
                      "fillOpacity",
                    ]
                  }
                />
              </RNSVGGroup>
            </RNSVGSvgView>
          </View>
          <Text
            style={
              Array [
                Object {
                  "color": "#282828",
                  "display": "flex",
                  "fontFamily": "SFUIDisplay-Regular",
                  "fontSize": 14,
                  "lineHeight": 20,
                  "marginLeft": 8,
                },
              ]
            }
          >
            15
          </Text>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "backgroundColor": "#67B6A8",
              "borderRadius": 8,
              "display": "flex",
              "marginTop": 8,
              "padding": 2,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
            Array [
              Object {},
            ],
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#282828",
                "display": "flex",
                "fontFamily": "SFUIDisplay-Regular",
                "fontSize": 14,
                "lineHeight": 20,
              },
            ]
          }
        >
          Test topic
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "marginLeft": 8,
          },
          Array [
            Object {},
          ],
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Array [
              Object {
                "borderRadius": 96,
                "height": 30,
                "width": 30,
              },
            ],
          ]
        }
      >
        <FastImageView
          resizeMode="cover"
          source={
            Object {
              "priority": "normal",
              "uri": "https://picsum.photos/id/237/200/300",
            }
          }
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
        />
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <RNSVGSvgView
          align="xMidYMid"
          bbHeight={16}
          bbWidth={16}
          fill="#282828"
          focusable={false}
          height={16}
          meetOrSlice={0}
          minX={0}
          minY={0}
          secondaryFill={null}
          secondaryOpacity={0.4}
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderWidth": 0,
              },
              Object {
                "marginLeft": 16,
              },
              Object {
                "flex": 0,
                "height": 16,
                "width": 16,
              },
            ]
          }
          testID="story-card-bookmark-icon"
          vbHeight={512}
          vbWidth={384}
          width={16}
        >
          <RNSVGGroup
            fill={4280821800}
            propList={
              Array [
                "fill",
              ]
            }
          >
            <RNSVGPath
              d="M336 0H48C21.49 0 0 21.49 0 48v464l192-112 192 112V48c0-26.51-21.49-48-48-48zm0 428.43l-144-84-144 84V54a6 6 0 0 1 6-6h276c3.314 0 6 2.683 6 5.996V428.43z"
              fill={4280821800}
              fillOpacity={1}
              propList={
                Array [
                  "fill",
                  "fillOpacity",
                ]
              }
            />
          </RNSVGGroup>
        </RNSVGSvgView>
      </View>
    </View>
  </View>
</View>
`;
